// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#useMovie handles null data 1`] = `
Object {
  "error": null,
  "isLoading": false,
  "movie": null,
}
`;

exports[`#useMovie search and return data 1`] = `"https://www.omdbapi.com/?apikey=test_key&i=1"`;

exports[`#useSearch handles null data 1`] = `
Object {
  "error": null,
  "isLoading": false,
  "movies": Array [],
}
`;

exports[`#useSearch search and return data 1`] = `"https://www.omdbapi.com/?apikey=test_key&s=inception"`;
